// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gulp > common build > css 1`] = `
"::before,::after {
    --tw-content: ""}
view,text,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
    --tw-contain-size:  ;
    --tw-contain-layout:  ;
    --tw-contain-paint:  ;
    --tw-contain-style:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
    --tw-contain-size:  ;
    --tw-contain-layout:  ;
    --tw-contain-paint:  ;
    --tw-contain-style:  
}
.m-_20px_ {
    margin: 20px
}
.mb-_20px_ {
    margin-bottom: 20px
}
.mt-_24px_ {
    margin-top: 24px
}
.block {
    display: block
}
.h-_41d54vw_ {
    height: 41.54vw
}
.h-full {
    height: 100%
}
.w-screen {
    width: 100vw
}
.space-y-4>view+view {
    --tw-space-y-reverse: 0;
    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(1rem * var(--tw-space-y-reverse))
}
.border-b {
    border-bottom-width: 1px
}
.border-_hEEEEEE_ {
    --tw-border-opacity: 1;
    border-color: rgb(238 238 238 / var(--tw-border-opacity))
}
.bg-_hfff_ {
    --tw-bg-opacity: 1;
    background-color: rgb(255 255 255 / var(--tw-bg-opacity))
}
.bg-_url_qhttpscssxxxdcomsxxdwebpq__ {
    background-image: url('https://xxx.com/xx.webp')
}
.bg-_url_httpscsspic1dzhimgdcomsv2-3ee20468f54bbfefcd0027283b21aaa8_720wdjpg__ {
    background-image: url(https://pic1.zhimg.com/v2-3ee20468f54bbfefcd0027283b21aaa8_720w.jpg)
}
.bg-_lengthc100p_100p_ {
    background-size: 100% 100%
}
.bg-no-repeat {
    background-repeat: no-repeat
}
.pb-_10px_ {
    padding-bottom: 10px
}
.pl-_15px_ {
    padding-left: 15px
}
.text-left {
    text-align: left
}
.text-center {
    text-align: center
}
.text-_14px_ {
    font-size: 14px
}
.text-_50px_ {
    font-size: 50px
}
.text-base {
    font-size: 1rem;
    line-height: 1.5rem
}
.text-xs {
    font-size: 0.75rem;
    line-height: 1rem
}
.font-bold {
    font-weight: 700
}
.font-medium {
    font-weight: 500
}
.text-_h123456_ {
    --tw-text-opacity: 1;
    color: rgb(18 52 86 / var(--tw-text-opacity))
}
.text-_h5ba4e5_ {
    --tw-text-opacity: 1;
    color: rgb(91 164 229 / var(--tw-text-opacity))
}"
`;

exports[`gulp > common build > js 1`] = `
"// index.js
// 获取应用实例
// const app = getApp()

Page({
  data: {
    motto: 'Hello World',
    userInfo: {},
    contentStyle: 'mt-_24px_',
    classNames: "bg-_url_qhttpscssxxxdcomsxxdwebpq__ text-_h123456_ text-_50px_ bg-_hfff_"
  },
  onLoad: function () {},
  copyText: function (e) {
    const txt = e.currentTarget.dataset.text
    wx.setClipboardData({
      data: txt,
      success: function (res) {
        wx.getClipboardData({
          success: function (res) {
            wx.showToast({
              title: '复制成功！',
              icon: 'success',
              duration: 1000
            })
          }
        })
      }
    })
  }
})
"
`;

exports[`gulp > common build > wxml 1`] = `
"<!-- index.wxml -->
<view class="h-full text-center">
  <view class="m-_20px_">
    <view class="bg-_url_httpscsspic1dzhimgdcomsv2-3ee20468f54bbfefcd0027283b21aaa8_720wdjpg__ bg-_lengthc100p_100p_ bg-no-repeat w-screen h-_41d54vw_"></view>
    <view class="space-y-4">
      <view class="text-_14px_">基于Gulp 的微信小程序前端开发工作流</view>
      <view class="text-_14px_ text-_h5ba4e5_" bindtap="copyText" data-text="https://github.com/sonofmagic/weapp-tailwindcss">
        https://github.com/sonofmagic/weapp-tailwindcss
      </view>
      <view class="text-xs font-medium">Fork from Jeff2Ma/WeApp-Workflow</view>
    </view>
    <view class="{{contentStyle}}">
      <view class="text-base font-bold pb-_10px_ mb-_20px_ text-left border-b border-_hEEEEEE_">
        功能介绍
      </view>
      <view class="pl-_15px_ text-left block">
        <view class="text-xs">支持 tailwindcss</view>
        <view class="text-xs">SCSS 实时编译为 WXSS</view>
        <view class="text-xs">px 和 rem 单位转小程序单位rpx</view>
        <view class="text-xs">支持 typescript</view>
      </view>
      <view class="{{classNames}}"></view>
    </view>
  </view>
</view>"
`;

exports[`gulp > common build with mangle options mangleClassFilter always true > css 1`] = `
"::before,::after {
    --tw-content: ""}
view,text,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
    --tw-contain-size:  ;
    --tw-contain-layout:  ;
    --tw-contain-paint:  ;
    --tw-contain-style:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
    --tw-contain-size:  ;
    --tw-contain-layout:  ;
    --tw-contain-paint:  ;
    --tw-contain-style:  
}
.a {
    margin: 20px
}
.b {
    margin-bottom: 20px
}
.c {
    margin-top: 24px
}
.d {
    display: block
}
.e {
    height: 41.54vw
}
.f {
    height: 100%
}
.g {
    width: 100vw
}
.h>view+view {
    --tw-space-y-reverse: 0;
    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(1rem * var(--tw-space-y-reverse))
}
.i {
    border-bottom-width: 1px
}
.j {
    --tw-border-opacity: 1;
    border-color: rgb(238 238 238 / var(--tw-border-opacity))
}
.k {
    --tw-bg-opacity: 1;
    background-color: rgb(255 255 255 / var(--tw-bg-opacity))
}
.l {
    background-image: url('https://xxx.com/xx.webp')
}
.m {
    background-image: url(https://pic1.zhimg.com/v2-3ee20468f54bbfefcd0027283b21aaa8_720w.jpg)
}
.n {
    background-size: 100% 100%
}
.o {
    background-repeat: no-repeat
}
.p {
    padding-bottom: 10px
}
.q {
    padding-left: 15px
}
.r {
    text-align: left
}
.s {
    text-align: center
}
.t {
    font-size: 14px
}
.u {
    font-size: 50px
}
.v {
    font-size: 1rem;
    line-height: 1.5rem
}
.w {
    font-size: 0.75rem;
    line-height: 1rem
}
.x {
    font-weight: 700
}
.y {
    font-weight: 500
}
.z {
    --tw-text-opacity: 1;
    color: rgb(18 52 86 / var(--tw-text-opacity))
}
.aa {
    --tw-text-opacity: 1;
    color: rgb(91 164 229 / var(--tw-text-opacity))
}"
`;

exports[`gulp > common build with mangle options mangleClassFilter always true > js 1`] = `
"// index.js
// 获取应用实例
// const app = getApp()

Page({
  data: {
    motto: 'Hello World',
    userInfo: {},
    contentStyle: 'c',
    classNames: "l z u k"
  },
  onLoad: function () {},
  copyText: function (e) {
    const txt = e.currentTarget.dataset.text
    wx.setClipboardData({
      data: txt,
      success: function (res) {
        wx.getClipboardData({
          success: function (res) {
            wx.showToast({
              title: '复制成功！',
              icon: 'success',
              duration: 1000
            })
          }
        })
      }
    })
  }
})
"
`;

exports[`gulp > common build with mangle options mangleClassFilter always true > wxml 1`] = `
"<!-- index.wxml -->
<view class="f s">
  <view class="a">
    <view class="m n o g e"></view>
    <view class="h">
      <view class="t">基于Gulp 的微信小程序前端开发工作流</view>
      <view class="t aa" bindtap="copyText" data-text="https://github.com/sonofmagic/weapp-tailwindcss">
        https://github.com/sonofmagic/weapp-tailwindcss
      </view>
      <view class="w y">Fork from Jeff2Ma/WeApp-Workflow</view>
    </view>
    <view class="{{contentStyle}}">
      <view class="v x p b r i j">
        功能介绍
      </view>
      <view class="q r d">
        <view class="w">支持 tailwindcss</view>
        <view class="w">SCSS 实时编译为 WXSS</view>
        <view class="w">px 和 rem 单位转小程序单位rpx</view>
        <view class="w">支持 typescript</view>
      </view>
      <view class="{{classNames}}"></view>
    </view>
  </view>
</view>"
`;

exports[`gulp > common build with mangle options prefix > css 1`] = `
"::before,::after {
    --tw-content: ""}
view,text,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
    --tw-contain-size:  ;
    --tw-contain-layout:  ;
    --tw-contain-paint:  ;
    --tw-contain-style:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
    --tw-contain-size:  ;
    --tw-contain-layout:  ;
    --tw-contain-paint:  ;
    --tw-contain-style:  
}
.a {
    margin: 20px
}
.b {
    margin-bottom: 20px
}
.c {
    margin-top: 24px
}
.block {
    display: block
}
.d {
    height: 41.54vw
}
.e {
    height: 100%
}
.f {
    width: 100vw
}
.g>view+view {
    --tw-space-y-reverse: 0;
    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(1rem * var(--tw-space-y-reverse))
}
.h {
    border-bottom-width: 1px
}
.i {
    --tw-border-opacity: 1;
    border-color: rgb(238 238 238 / var(--tw-border-opacity))
}
.j {
    --tw-bg-opacity: 1;
    background-color: rgb(255 255 255 / var(--tw-bg-opacity))
}
.k {
    background-image: url('https://xxx.com/xx.webp')
}
.l {
    background-image: url(https://pic1.zhimg.com/v2-3ee20468f54bbfefcd0027283b21aaa8_720w.jpg)
}
.m {
    background-size: 100% 100%
}
.n {
    background-repeat: no-repeat
}
.o {
    padding-bottom: 10px
}
.p {
    padding-left: 15px
}
.q {
    text-align: left
}
.r {
    text-align: center
}
.s {
    font-size: 14px
}
.t {
    font-size: 50px
}
.u {
    font-size: 1rem;
    line-height: 1.5rem
}
.v {
    font-size: 0.75rem;
    line-height: 1rem
}
.w {
    font-weight: 700
}
.x {
    font-weight: 500
}
.y {
    --tw-text-opacity: 1;
    color: rgb(18 52 86 / var(--tw-text-opacity))
}
.z {
    --tw-text-opacity: 1;
    color: rgb(91 164 229 / var(--tw-text-opacity))
}"
`;

exports[`gulp > common build with mangle options prefix > js 1`] = `
"// index.js
// 获取应用实例
// const app = getApp()

Page({
  data: {
    motto: 'Hello World',
    userInfo: {},
    contentStyle: 'c',
    classNames: "k y t j"
  },
  onLoad: function () {},
  copyText: function (e) {
    const txt = e.currentTarget.dataset.text
    wx.setClipboardData({
      data: txt,
      success: function (res) {
        wx.getClipboardData({
          success: function (res) {
            wx.showToast({
              title: '复制成功！',
              icon: 'success',
              duration: 1000
            })
          }
        })
      }
    })
  }
})
"
`;

exports[`gulp > common build with mangle options prefix > wxml 1`] = `
"<!-- index.wxml -->
<view class="e r">
  <view class="a">
    <view class="l m n f d"></view>
    <view class="g">
      <view class="s">基于Gulp 的微信小程序前端开发工作流</view>
      <view class="s z" bindtap="copyText" data-text="https://github.com/sonofmagic/weapp-tailwindcss">
        https://github.com/sonofmagic/weapp-tailwindcss
      </view>
      <view class="v x">Fork from Jeff2Ma/WeApp-Workflow</view>
    </view>
    <view class="{{contentStyle}}">
      <view class="u w o b q h i">
        功能介绍
      </view>
      <view class="p q block">
        <view class="v">支持 tailwindcss</view>
        <view class="v">SCSS 实时编译为 WXSS</view>
        <view class="v">px 和 rem 单位转小程序单位rpx</view>
        <view class="v">支持 typescript</view>
      </view>
      <view class="{{classNames}}"></view>
    </view>
  </view>
</view>"
`;

exports[`gulp > common build with mangle true > css 1`] = `
"::before,::after {
    --tw-content: ""}
view,text,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
    --tw-contain-size:  ;
    --tw-contain-layout:  ;
    --tw-contain-paint:  ;
    --tw-contain-style:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
    --tw-contain-size:  ;
    --tw-contain-layout:  ;
    --tw-contain-paint:  ;
    --tw-contain-style:  
}
.tw-a {
    margin: 20px
}
.tw-b {
    margin-bottom: 20px
}
.tw-c {
    margin-top: 24px
}
.block {
    display: block
}
.tw-d {
    height: 41.54vw
}
.tw-e {
    height: 100%
}
.tw-f {
    width: 100vw
}
.tw-g>view+view {
    --tw-space-y-reverse: 0;
    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(1rem * var(--tw-space-y-reverse))
}
.tw-h {
    border-bottom-width: 1px
}
.tw-i {
    --tw-border-opacity: 1;
    border-color: rgb(238 238 238 / var(--tw-border-opacity))
}
.tw-j {
    --tw-bg-opacity: 1;
    background-color: rgb(255 255 255 / var(--tw-bg-opacity))
}
.tw-k {
    background-image: url('https://xxx.com/xx.webp')
}
.tw-l {
    background-image: url(https://pic1.zhimg.com/v2-3ee20468f54bbfefcd0027283b21aaa8_720w.jpg)
}
.tw-m {
    background-size: 100% 100%
}
.tw-n {
    background-repeat: no-repeat
}
.tw-o {
    padding-bottom: 10px
}
.tw-p {
    padding-left: 15px
}
.tw-q {
    text-align: left
}
.tw-r {
    text-align: center
}
.tw-s {
    font-size: 14px
}
.tw-t {
    font-size: 50px
}
.tw-u {
    font-size: 1rem;
    line-height: 1.5rem
}
.tw-v {
    font-size: 0.75rem;
    line-height: 1rem
}
.tw-w {
    font-weight: 700
}
.tw-x {
    font-weight: 500
}
.tw-y {
    --tw-text-opacity: 1;
    color: rgb(18 52 86 / var(--tw-text-opacity))
}
.tw-z {
    --tw-text-opacity: 1;
    color: rgb(91 164 229 / var(--tw-text-opacity))
}"
`;

exports[`gulp > common build with mangle true > js 1`] = `
"// index.js
// 获取应用实例
// const app = getApp()

Page({
  data: {
    motto: 'Hello World',
    userInfo: {},
    contentStyle: 'tw-c',
    classNames: "tw-k tw-y tw-t tw-j"
  },
  onLoad: function () {},
  copyText: function (e) {
    const txt = e.currentTarget.dataset.text
    wx.setClipboardData({
      data: txt,
      success: function (res) {
        wx.getClipboardData({
          success: function (res) {
            wx.showToast({
              title: '复制成功！',
              icon: 'success',
              duration: 1000
            })
          }
        })
      }
    })
  }
})
"
`;

exports[`gulp > common build with mangle true > wxml 1`] = `
"<!-- index.wxml -->
<view class="tw-e tw-r">
  <view class="tw-a">
    <view class="tw-l tw-m tw-n tw-f tw-d"></view>
    <view class="tw-g">
      <view class="tw-s">基于Gulp 的微信小程序前端开发工作流</view>
      <view class="tw-s tw-z" bindtap="copyText" data-text="https://github.com/sonofmagic/weapp-tailwindcss">
        https://github.com/sonofmagic/weapp-tailwindcss
      </view>
      <view class="tw-v tw-x">Fork from Jeff2Ma/WeApp-Workflow</view>
    </view>
    <view class="{{contentStyle}}">
      <view class="tw-u tw-w tw-o tw-b tw-q tw-h tw-i">
        功能介绍
      </view>
      <view class="tw-p tw-q block">
        <view class="tw-v">支持 tailwindcss</view>
        <view class="tw-v">SCSS 实时编译为 WXSS</view>
        <view class="tw-v">px 和 rem 单位转小程序单位rpx</view>
        <view class="tw-v">支持 typescript</view>
      </view>
      <view class="{{classNames}}"></view>
    </view>
  </view>
</view>"
`;
